k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service
  namespace: incidentai

spec:

  replicas: 2

  selector:
    matchLabels:
      app: auth-service

  template:

    metadata:
      labels:
        app: auth-service

    spec:

      containers:

        - name: auth-service

          image: yourdockerhub/auth-service:latest

          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service

metadata:
  name: auth-service
  namespace: incidentai

spec:

  selector:
    app: auth-service

  ports:

    - port: 8081
      targetPort: 8081
